<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/reader_list_item_padding">

    <CheckedTextView
        android:id="@+id/reader_checkedtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:clickable="false"
        android:gravity="center_vertical" />

    <LinearLayout
        android:id="@+id/reader_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start">

            <TextView
                android:id="@+id/label_serial"
                android:fontFamily="@font/titilliumweb_bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:gravity="left"
                android:text="@string/title_serial" />

            <TextView
                android:fontFamily="@font/titilliumweb_bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tv_serial"
                android:fontFamily="@font/titilliumweb_regular"
                android:layout_width="wrap_content"/>
        </TableRow>

        <TableRow
            android:id="@+id/autoDetectReadersRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start">

            <TextView
                android:id="@+id/autoDetectReadersTitle"
                android:layout_width="wrap_content"
                android:fontFamily="@font/titilliumweb_bold"
                android:textColor="@color/colorBlack"
                android:text="@string/title_model" />

            <TextView
                android:fontFamily="@font/titilliumweb_bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tv_model"
                android:fontFamily="@font/titilliumweb_regular"
                android:layout_width="wrap_content" />
        </TableRow>


    </LinearLayout>
</LinearLayout>